# Analytic-Combinatorics

./: README.md
Lab1/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  sigmaResults.txt
Lab2/src/: main.cpp  plotter.py
Lab3/ex64/: ex64.jl
Lab3/ex66/: ex66.jl
Lab3/ex74/: ex74.jl
